# mergedog

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: blog-post.md  mcp-prompt.md  workstreams.md
docs/memory-palace/: MEMORY.md  _meta_log.md  feedback_commit_cadence.md  feedback_smallest_implementation.md  project_claude_runtime.md  project_design_pillars.md  project_handoff_comment.md  project_idempotency.md  project_mux_ux.md  project_pytorch_ci.md  project_security_trust_model.md  user.md
mergedog/: __init__.py  __main__.py  bootstrap.py  chat.py  claude.py  cli.py  config.py  context.py  github.py  handoff.py  head_trust.py  injection.py  interventions.py  ipc.py  labels.py  log.py  log_classifier.py  mcp_server.py  mux.py  net.py  notify.py  paths.py  process.py  project.py  prompts.py  rage.py  repo.py  sanitize.py  shepherd.py  stack.py  stack_shepherd.py  state.py  status.py  taint.py  trust_seed.py
tests/: test_claude.py  test_cli.py  test_config.py  test_context.py  test_github.py  test_github_logs.py  test_handoff.py  test_head_trust.py  test_injection.py  test_interventions.py  test_labels.py  test_log.py  test_log_classifier.py  test_mux_status.py  test_net.py  test_project.py  test_prompts.py  test_rage.py  test_repo.py  test_sanitize.py  test_shepherd_helpers.py  test_shepherd_stack_dependency.py  test_stack.py  test_stack_scheduler.py  test_state.py  test_status.py  test_taint.py
