[project]
name = "mergedog"
version = "0.1.0"
description = "Autonomous shepherd for OSS PR contributions to pytorch/pytorch"
requires-python = ">=3.11"
dependencies = [
    "textual>=8.2.5",
]

[project.scripts]
mergedog = "mergedog.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mergedog"]
